--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -78,6 +78,7 @@ services:
     build:
       context: ./recommender
       dockerfile: Dockerfile.dev
+    user: gitlab-runner:gitlab-runner
     container_name: recommender
     ports:
       - 5001:5000
