--- a/compose.yml
+++ b/compose.yml
@@ -33,8 +33,8 @@ services:
       - private
       - public
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail http://localhost:3000/health || exit 1" ]
-      interval: 20s
+      test: "wget --tries=100 http://localhost:3000/health || exit 1" 
+      interval: 10s
       timeout: 60s
       start_period: 120s
       start_interval: 30s
@@ -56,7 +56,7 @@ services:
     restart: unless-stopped
     env_file: .env
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: $POSTGRES_DB
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
