refactor(ci): remove unused comments / TODOs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -147,7 +147,7 @@ deploy:
   before_script:
     - *docker_init
   script:
-    - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml up -d 
+    - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml up --wait --no-build --force-recreate -d 
     - docker compose -f compose.yml -f compose.prod.yml logs
   tags:
     - prod
