--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -20,7 +20,7 @@ services:
       context: ./api
       dockerfile: Dockerfile.dev
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
     ports:
       - 3000:3000
     command: "npm run start:prod:migrate"
