--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,10 @@
 FROM node:18-alpine as base
-USER node
 EXPOSE 8080
 WORKDIR /client
 CMD ["npm", "run", "start"]
 
-RUN chmod -R 777 /app
-
 FROM base as build
+
 
 ###################
 # BUILD FOR BUILDING
@@ -19,6 +17,8 @@ RUN npm ci && npm cache clean --force && npm prune
 
 COPY --chown=node:node . .
 RUN npm run build
+
+USER node
 
 ###################
 # BUILD FOR DEV
@@ -35,7 +35,7 @@ USER node
 FROM base as production
 ENV NODE_ENV production
 
-COPY --from=build /client/package.json ./package.json
-COPY --from=build /client/node_modules ./node_modules
-COPY --from=build /client/.next ./.next
-COPY --from=build /client/public ./public
+COPY --from=build --chown=node:node /client/package.json ./package.json
+COPY --from=build --chown=node:node /client/node_modules ./node_modules
+COPY --from=build --chown=node:node /client/.next ./.next
+COPY --from=build --chown=node:node /client/public ./public
