feat(ci): only production

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -14,7 +14,7 @@ ENV NODE_ENV development
 
 COPY --chown=node:node package*.json .
 COPY --chown=node:node prisma ./prisma/
-RUN npm ci && npm cache clean --force && npm prune
+RUN npm ci --only=production && npm cache clean --force && npm prune
 
 COPY --chown=node:node . .
 
