feat(docker): fix command

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -28,6 +28,7 @@ services:
       target: production
     labels:
       - "autoheal=true"
+    command: "npm run start"
   elasticsearch:
     labels:
       - "autoheal=true"
