--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,12 +25,10 @@ services:
       when: always
       variables:
         IMAGE_TAG: latest
-        TARGET: production
     - if: $CI_COMMIT_REF_NAME == "dev"
       when: always
       variables:
         IMAGE_TAG: pre-release
-        TARGET: dev
   before_script:
     - *docker_init
 
@@ -118,14 +116,14 @@ build-api:
   extends: ".build-rules"
   script:
     - cd api
-    - docker build --target $TARGET -t $CI_REGISTRY_IMAGE/api:$IMAGE_TAG . -f Dockerfile
+    - docker build -t $CI_REGISTRY_IMAGE/api:$IMAGE_TAG . -f Dockerfile
     - docker push $CI_REGISTRY_IMAGE/api:$IMAGE_TAG
 
 build-client:
   extends: ".build-rules"
   script:
     - cd frontend
-    - docker build --target $TARGET -t $CI_REGISTRY_IMAGE/client:$IMAGE_TAG . -f Dockerfile
+    - docker build -t $CI_REGISTRY_IMAGE/client:$IMAGE_TAG . -f Dockerfile
     - docker push $CI_REGISTRY_IMAGE/client:$IMAGE_TAG
 
 build-recommender:
@@ -168,9 +166,9 @@ deploy-staging:
   before_script:
     - *docker_init
   script:
-    - TAG=$TAG docker compose -f compose.yml -f compose.dev.yml down --volumes
-    - TAG=$TAG docker compose -f compose.yml -f compose.dev.yml up --wait --no-build --force-recreate -d 
-    - TAG=$TAG docker compose -f compose.yml -f compose.dev.yml logs
+    - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml down --volumes
+    - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml up --wait --no-build --force-recreate -d 
+    - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml logs
   tags:
     - staging
 
