feat(ci): docker compose down before starting
To ensure that the container is really using the latest image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -148,6 +148,7 @@ deploy:
     - *docker_init
   script:
     - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml pull
+    - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml down
     - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml up --wait --no-build --force-recreate -d 
     - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml logs
   tags:
@@ -168,6 +169,7 @@ deploy-staging:
     - *docker_init
   script:
     - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml pull
+    - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml down
     - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml up --wait --no-build --force-recreate -d 
     - TAG=$TAG docker compose -f compose.yml -f compose.prod.yml logs
   tags:
