--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
         "start:prod:migrate": "npx prisma migrate deploy && npm run start:prod",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
         "fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
+        "test": "jest --group=-integration",
+        "test:integration": "jest --detectOpenHandles --group=integration",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -74,6 +75,7 @@
         "@nestjs/cli": "^10.3.0",
         "@nestjs/schematics": "^9.0.0",
         "@nestjs/testing": "^9.4.2",
+        "@testcontainers/postgresql": "^10.6.0",
         "@types/cache-manager-redis-store": "^2.0.2",
         "@types/express": "^4.17.13",
         "@types/jest": "29.5.7",
@@ -92,12 +94,14 @@
         "eslint-plugin-unused-imports": "^2.0.0",
         "jest": "^29.3.1",
         "jest-junit": "^16.0.0",
+        "jest-runner-groups": "^2.2.0",
         "nodemon": "^3.0.1",
         "prettier": "^2.3.2",
         "prisma": "^4.10.1",
         "run-script-webpack-plugin": "^0.2.0",
         "source-map-support": "^0.5.20",
-        "supertest": "^6.1.3",
+        "supertest": "^6.3.4",
+        "testcontainers": "^10.6.0",
         "ts-jest": "29.1.1",
         "ts-loader": "^9.2.3",
         "ts-node": "^10.9.1",
@@ -105,45 +109,6 @@
         "typescript": "^5.0.0",
         "webpack": "^5.75.0",
         "webpack-node-externals": "^3.0.0"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s",
-            "!**/__tests__/**",
-            "!**/*.test.(t|j)s",
-            "!**/*.spec.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node",
-        "reporters": [
-            "default",
-            "jest-junit"
-        ],
-        "moduleNameMapper": {
-            "^src/(.*)$": "<rootDir>/$1"
-        },
-        "setupFiles": [
-            "../jest.setup.js"
-        ],
-        "coveragePathIgnorePatterns": [
-            "/node_modules/",
-            ".*\\.queries\\.ts$",
-            ".*\\.module\\.ts$",
-            ".*\\.dto\\.ts$",
-            "main.ts",
-            "src/app.service.ts",
-            "src/types/types.ts"
-        ]
     },
     "jest-junit": {
         "suiteName": "jest tests",
