test(keyfacts): Add Jest configuration and export useFetchWithAuth function
Update Keyfacts component to use useFetchWithAuth hook

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -30,6 +30,6 @@
             }
         ]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/setupTests.js"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/setupTests.js", "jest.config.js"],
     "exclude": ["node_modules"]
 }
