--- a/api/package.json
+++ b/api/package.json
@@ -128,7 +128,10 @@
         ],
         "moduleNameMapper": {
             "^src/(.*)$": "<rootDir>/$1"
-        }
+        },
+        "setupFiles": [
+            "../jest.setup.js"
+        ]
     },
     "jest-junit": {
         "suiteName": "jest tests",
