--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,11 +49,12 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import-helpers": "^1.3.1",
         "jest": "^29.7.0",
-        "jest-environment-jsdom": "29.7.0",
         "jest-axe": "^8.0.0",
         "jest-dom": "^4.0.0",
+        "jest-environment-jsdom": "29.7.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
+        "react-select-event": "^5.5.1",
         "sass": "^1.60.0",
         "tailwindcss": "^3.2.7",
         "typescript": "5.2.2"
