--- a/api/package.json
+++ b/api/package.json
@@ -131,6 +131,13 @@
         },
         "setupFiles": [
             "../jest.setup.js"
+        ],
+        "coveragePathIgnorePatterns": [
+            "/node_modules/",
+            ".*\\.controller\\.ts$",
+            ".*\\.queries\\.ts$",
+            ".*\\.module\\.ts$",
+            ".*\\.dto\\.ts$"
         ]
     },
     "jest-junit": {
