--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@next/font": "13.5.6",
         "framer-motion": "^10.12.16",
+        "jest-fetch-mock": "^3.0.3",
         "next": "^13.4.11",
         "next-auth": "^4.22.1",
         "next-pwa": "^5.6.0",
