--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@commitlint/cz-commitlint": "^18.2.0",
     "@commitlint/format": "^18.1.0",
     "@commitlint/prompt-cli": "^18.2.0",
+    "@types/cron": "^2.4.0",
     "commitizen": "^4.3.0",
     "conventional-changelog-atom": "^4.0.0",
-    "@types/cron": "^2.4.0",
     "cypress": "^12.13.0",
     "husky": "^8.0.0",
     "inquirer": "^8.2.6",
@@ -33,6 +33,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "cypress-real-events": "^1.11.0",
     "nest-schedule": "^0.6.4"
   }
 }
