--- a/api/package.json
+++ b/api/package.json
@@ -17,12 +17,12 @@
         "start:prod:migrate": "npx prisma migrate deploy && npm run start:prod",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
         "fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest --group=-integration",
+        "test": "jest --",
+        "test:unit": "jest --group=-integration",
         "test:integration": "jest --detectOpenHandles --group=integration",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json",
         "test:ci": "jest --ci --reporters=default --reporters=jest-junit && gitlab-ci-reporter",
         "test:ci-gitlab": "jest --ci --reporters=default --reporters=jest-junit"
     },
@@ -75,6 +75,7 @@
         "@nestjs/cli": "^10.3.0",
         "@nestjs/schematics": "^9.0.0",
         "@nestjs/testing": "^9.4.2",
+        "@testcontainers/elasticsearch": "^10.6.0",
         "@testcontainers/postgresql": "^10.6.0",
         "@types/cache-manager-redis-store": "^2.0.2",
         "@types/express": "^4.17.13",
