--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
         "build": "next build",
         "start": "next start -p 8080",
         "lint": "next lint",
-        "test": "jest",
+        "test": "jest --",
         "test:cov": "jest --coverage"
     },
     "dependencies": {
