--- a/api/package.json
+++ b/api/package.json
@@ -18,8 +18,8 @@
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
         "fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest --maxWorkers=2 --",
-        "test:unit": "jest --maxWorkers=2 --group=-integration",
-        "test:integration": "jest --maxWorkers=2 --detectOpenHandles --group=integration",
+        "test:unit": "jest --maxWorkers=2 --group=-integration --",
+        "test:integration": "jest --maxWorkers=2 --detectOpenHandles --group=integration --",
         "test:watch": "jest --maxWorkers=2 --watch",
         "test:cov": "jest --maxWorkers=2 --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
