--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -3,6 +3,7 @@ worker_processes 1;
 events { }
 
 http {
+    client_max_body_size 20M;
     upstream frontend {
         server frontend:8080;
     }
