--- a/.env
+++ b/.env
@@ -29,4 +29,4 @@ API_URL="http://api:${API_PORT}"
 
 BASE_URL=http://localhost:8080
 
-NEXT_PUBLIC_GOOGLE_ANALYTICS= 'G-8V6XJ6QLC5'
+NEXT_PUBLIC_GOOGLE_ANALYTICS= ""
